add fascism and sionism

--- a/db/events.yaml
+++ b/db/events.yaml
@@ -4,6 +4,12 @@ events:
     type: riunione-segreta
     location: Georgia
     outcome: federal-reserve
+  1917-balfour-declaration:
+    year: 1917
+    month: 11
+    type: declaration
+    location: London
+    outcome: British support for Jewish homeland in Palestine
   1944-bretton-woods:
     year: 1944
     type: conferenza
