--- a/db/families.yaml
+++ b/db/families.yaml
@@ -472,6 +472,9 @@ families:
     - person: alexandre-de-rothschild
       generation: 7
       role: exec-chairman
+    - person: walter-rothschild
+      generation: 3
+      role: 2nd Baron Rothschild
   tata:
     origin: India
     founder: Jamsetji Tata
